eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wsi-alb
  namespace: wsi
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: wsi-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0586b35b591f46159, subnet-001c82a5e85708070
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "2"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=0
    alb.ingress.kubernetes.io/security-groups: sg-06c7f59bb7b9be8ce
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /v1/token
        pathType: Prefix
        backend:
          service:
            name: token-service
            port:
              number: 80
      - path: /v1/employee
        pathType: Prefix
        backend:
          service:
            name: employee-service
            port:
              number: 80
